# jetson-reader

./: .gitignore  README.md  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  docker-compose.yml
scripts/: rebuild.sh  setup-nano.sh
src/reader/: __init__.py  config.py  gesture.py  main.py  ocr.py  tts.py  wand.py
