[project]
name = "reading-assistant"
version = "0.1.0"
description = "Jetson Nano reading assistant - tap a word, hear it spoken"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "numpy>=1.24.0",
    "ipykernel>=7.2.0",
]

[project.scripts]
reader = "reader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reader"]
